--- a/src/style.css
+++ b/src/style.css
@@ -152,9 +152,19 @@ button:hover {
   grid-area: a;
   background-color: #887e55;
   border-radius: 10px;
-
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 3rem;
+  gap: 3rem;
+}
+
+.phone-container {
+  display: flex;
+}
+
+.address-container {
+  display: flex;
 }
 
 .bl-b {
