--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,9 @@ body {
   background-color: #ffd8a8;
 }
 
+/***************/
+/* Header */
+/***************/
 .header {
   display: flex;
   align-items: center;
@@ -41,8 +44,12 @@ body {
   display: flex;
   list-style: none;
   gap: 1.3rem;
-  font-size: 3rem;
+  font-size: 4rem;
   font-weight: 800;
+}
+
+a {
+  text-decoration: none;
 }
 
 a:link,
@@ -54,4 +61,32 @@ a:hover,
 a:active {
   color: #1c3434;
   transition: all 0.3s;
+}
+
+/***************/
+/* Main */
+/***************/
+
+.home-content {
+  background-image: url('./assets/jakub-kapusnak.jpg');
+  background-size: cover;
+}
+
+/***************/
+/* Footer */
+/***************/
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 1.2rem;
+  font-weight: 900;
+  color: #332b22;
+}
+
+.created-by {
+  padding: 0.2rem 0;
+  border-top: 1px solid #1c3434;
+  border-bottom: 1px solid #1c3434;
 }
