--- a/src/style.css
+++ b/src/style.css
@@ -39,6 +39,7 @@ body {
 .logo {
   font-size: 4.5rem;
   flex-grow: 1;
+  cursor: pointer;
 }
 
 .links {
@@ -101,6 +102,7 @@ a:active {
   border: none;
   border: 1px solid black;
   border-radius: 4px;
+  cursor: pointer;
 }
 
 /***************/
@@ -182,6 +184,8 @@ img {
   flex-grow: 6;
   font-size: 2rem;
   color: #ffdcb1;
+  padding-left: 2rem;
+  padding-top: 2rem;
 }
 
 /***************/
